MB-39864: Improve passive stream collection exception logging

Logging exception but missing the DCP prefix (which comes from using
log()) and no vb logged.

Change-Id: I2c7d039cda9d53eb784ac5694d4a086c2174df26
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/133814
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>